--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,25 +2,164 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-weight: 500;
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
+.text {
+  font-size: 24px;
+}
 
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  align-items: center;
+}
+.row {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  align-items: center;
+}
+.pointer {
+  cursor: pointer;
+}
+
+body {
+  background-color: white;
+}
+nav, main, footer {
+  padding: 32px;
+  width: 100vw;
+}
+main {
+  background-color: white;
+}
+nav{
+  color: #000000;
+}
+.nav-section {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 16px 0;
+}
+.logo {
+  font-size: 24px;
+  color: #000000;
+}
+.logo-color-letters {
+  color: black;
+}
+
+.date {
+  font-size: 10px;
+}
+
+.searchbar-container {
+  display: flex;
+  align-items: center;
+  background-color: #f5f5f5;  
+  border-radius: 0px;
+  overflow: hidden;
+}
+.searchbar-icon {
+  margin: 8px;
+}
+.searchbar-container input {
+  background-color: inherit;
+  border: none;
+  padding: 8px 8px 8px 0;
+  color: black;
+  display: flex;
+  width: 200px;
+}
+.searchbar-container input::placeholder {
+  color: #0000007c;
+  opacity: 1;  /* Firefox */
+}
+.searchbar-container input:focus::placeholder {
+  color: transparent;
+}
+.searchbar-container input:focus {
+  outline: none;
+}
+
+.n {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.random-text {
+  color: #2E3440;
+  font-size: 12px;
+  line-height: 1.5;
+  display: flex;
+}
+.random-text div{
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding-right: 10%;
+}
+
+
+
+
+
+.filled_button {
+  padding: 8px 16px;
+  border: none;
+  background-color: #000000;
+  color: white;
+  cursor: pointer;
+}
+
+@media only screen and (max-device-width: 600px) {
+  nav, main, footer {
+    padding: 16px;
+    width: 100vw;
+  }
+  .nav-section {
+    align-items: initial;
+  }
+  .small-column {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+  .small-row {
+    justify-content: space-between;
+    display: flex;
+    flex-direction: row;
+  }
+  .categories {
+    display: none;
+  }
+  .show {
+    display: flex;
+    flex-direction: column;
+    background-color: #8FBCBB;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 76px;
+    left: 0;
+
+    display: none;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+
 }
